--- a/samsung.css
+++ b/samsung.css
@@ -14,9 +14,8 @@
 
 body {
   min-height: 100vh;
-  min-height: 100dvh;
+  width: auto;
   background-color: var(--dark);
-  overflow-x: hidden;
 }
 
 nav {
