--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@
 
 body {
   min-height: 100vh;
-  min-height: 100dvh;
+  width: 100%;
   background-color: var(--superdark);
   overflow-x: hidden;
 }
