--- a/order.css
+++ b/order.css
@@ -433,3 +433,19 @@ input[type="email"] {
   color: var(--superlight);
   transition: ease 0.3s;
 }
+
+.remove-pizza-btn {
+  margin-left: 50px;
+  padding: 5px 15px;
+  border: none;
+  font-weight: 600;
+  color: var(--superlight);
+  background-color: var(--dark);
+  border-radius: 50px;
+}
+
+.remove-pizza-btn:hover {
+  background-color: var(--superdark);
+  color: var(--superlight);
+  transition: ease 0.3s;
+}
