--- a/samsung.css
+++ b/samsung.css
@@ -1,3 +1,70 @@
+:root {
+  --superlight: #fff;
+  --neutral: #f2b05e;
+  --dark: #a62103;
+  --superdark: #031323;
+}
+
+@media screen and (min-width: 452px) {
+  body {
+    width: 90%;
+  }
+
+  .icon-banner {
+    font-size: 18px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 7px;
+  }
+
+  #pizza {
+    margin-top: 50px;
+    height: 325vh;
+  }
+
+  #menu {
+    height: 215vh;
+  }
+
+  #menu p {
+    margin-top: -20px;
+  }
+
+  #btns {
+    height: 10px;
+    width: 80%;
+    gap: 20px;
+    margin-left: 50px;
+    margin-bottom: 50px;
+  }
+
+  #contact {
+    height: 125vh;
+  }
+
+  .bookNow {
+    margin-left: 90px;
+  }
+
+  .reviews .slideshow-container {
+    width: 85vw;
+    margin-left: -10px;
+  }
+
+  .about {
+    height: 110vh;
+  }
+
+  .about-more {
+    margin-left: 120px;
+  }
+
+  .about-image {
+    margin-left: 110px;
+  }
+}
+
 @media (min-width: 720px) {
   #pizza {
     height: 180vh;
